--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
                         <li><a href="#about" class="scroll" data-hover="About">About</a></li>
                         <li><a href="services.html" data-hover="Services">Services</a></li>
                         <li><a href="#gallery" class="scroll" data-hover="Gallery">Gallery</a></li>
-                        <li><a href="#news" class="scroll" data-hover="News">Videos</a></li>
-                        <li><a href="#news" class="scroll" data-hover="News">Pricing</a></li>
-                        <li><a href="contact.html" class="scroll" data-hover="Contact">Contact</a></li>
+                        <li><a href="#news" class="scroll" data-hover="Videos">Videos</a></li>
+                        <li><a href="#news" class="scroll" data-hover="Pricing">Pricing</a></li>
+                        <li><a href="../true/contact.html" data-hover="Contact">Contact</a></li>
                     </ul>	
 					<div class="clearfix"> </div>
 				</div>
