--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,11 @@
         <!-- //banner-text -->
     </div>
     <!-- //banner -->
+    [wpforms id="5" title="false" description="false"]
     <!-- welcome -->
+    <div class="map agileits">
+        <iframe src="https://www.google.co.in/maps/place/Prabhu's+Sky+Panaromic/@15.3897341,73.8480983,17.75z/data=!4m8!1m2!2m1!1sprabhu+sky+panaromic!3m4!1s0x0:0x7ff8633de5280a82!8m2!3d15.389667!4d73.8491133"></iframe>
+    </div>
     <!-- //contact -->
     <!-- subscribe -->
     <div class="subscribe team jarallax">
@@ -211,17 +215,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/bootstrap.js"></script>
 </body>
-Attachments
-Pricing
-Contact us (from)email id
-truebackend@gmail.com
 
-interactive whiteboard and automatic school bell
-parking barrier and metal detechter
-centralise attendance and access control
-security alarm system none
-facebook
-youtube
-https://www.youtube.com/channel/UCPkFcHvhfslWKOW
-3nrsosAg
 </html>
