--- a/services.html
+++ b/services.html
@@ -32,10 +32,10 @@
                 </div>
                 <div class="agile_social_banner">
                     <ul class="agileits_social_list">
-                        <li><a href="#" class="WOS_agile_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#" class="agile_twitter"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a href="#" class="WOS_agile_dribble"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-                        <li><a href="#" class="WOS_agile_vimeo"><i class="fa fa-vimeo" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.facebook.com/true.backend" class="WOS_agile_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                        <li><a class="agile_twitter" href="https://api.whatsapp.com/send?phone=+918767780676&text=Hi, I contacted you Through your website." class="social-icon whatsapp"> <i class="fa fa-whatsapp" aria-hidden="true"></i></a></li>
+                        <li><a href="https://www.youtube.com/channel/UCPkFcHvhfslWKOW3nrsosAg" class="WOS_agile_dribble"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                        <li><a href="https://plus.google.com/u/0/112858909645140124531" class="WOS_agile_vimeo"><i class="fa fa-google-plus" aria-hidden="true"></i></a></li>
                     </ul>
                     <br />
                     <h3 class="callno">+91 7070211121</h3>
@@ -336,7 +336,7 @@
     <div class="footer">
         <div class="container">
             <h3><a href="http://www.webonspot.com">True Backend</a></h3>
-            <p class="w3-link">© All Rights Reserved | Designed by  <a itemprop="url" href="http://www.webonspot.com">Web On Spot Muzaffarpur</a></p>
+            <p class="w3-link">© All Rights Reserved | Designed by  <a itemprop="url" href="http://www.webonspot.com">Web On Spot </a></p>
             <div class="agileits_social_icons">
                 <ul class="agileits_social_list">
                     <li><a href="#" class="WOS_agile_facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -383,10 +383,7 @@
                 </div>
                 <div class="modal-body">
                     <img src="services/school_bus_monitoring.jpg" alt="">
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at. Donec fringilla lacus eu pretium rutrum. Cras aliquet congue ullamcorper. Etiam mattis eros eu ullamcorper volutpat. Proin ut dui a urna efficitur varius. uisque molestie cursus mi et congue consectetur adipiscing elit cras rutrum iaculis enim, Lorem ipsum dolor sit amet, non convallis felis mattis at. Maecenas sodales tortor ac ligula ultrices dictum et quis urna. Etiam pulvinar metus neque, eget porttitor massa vulputate.
-
-                    </p>
+                    
                 </div>
             </div>
         </div>
